Bug 215893 - filelight kpart crashes when invoked in remote ioslaves [QWidget::d_func, QWidgetPrivate::createWinId, QWidget::winId]
Summary: filelight kpart crashes when invoked in remote ioslaves [QWidget::d_func, QW...
Status: RESOLVED FIXED
Alias: None
Product: kio
Classification: Frameworks and Libraries
Component: general (show other bugs)
Version: unspecified
Platform: Compiled Sources Linux
: NOR crash
Target Milestone: ---
Assignee: David Faure
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-11-23 22:35 UTC by Marcel Partap
Modified: 2010-03-14 20:51 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed In:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Marcel Partap 2009-11-23 22:35:14 UTC
Application: konqueror (4.3.77 (KDE 4.3.77 (KDE 4.4 >= 20091120)))
KDE Version: 4.3.77 (KDE 4.3.77 (KDE 4.4 >= 20091120)) (Compiled from sources)
Qt Version: 4.6.0
Operating System: Linux 2.6.31-gentoo-r6 x86_64
Distribution: "Gentoo Base System release 2.0.1"

What I was doing when the application crashed:
Wanted to have a look at a remote (fish:// or ftp://) directory's size distribution but the filelight kpart reproducably crashes when i select the Radialmap view mode..

 -- Backtrace:
Application: Konqueror (kdeinit4), signal: Segmentation fault
[KCrash Handler]
#5  QWidget::d_func (this=<value optimized out>, winid=0) at ../../src/gui/kernel/qwidget.h:143
#6  QWidgetPrivate::createWinId (this=<value optimized out>, winid=0) at kernel/qwidget.cpp:2278
#7  0x00007ff14427df2f in QWidget::winId (this=0x1d78460) at kernel/qwidget.cpp:2264
#8  0x00007ff145df12fb in KIO::SchedulerPrivate::registerWindow (this=0x1f8b460, wid=<value optimized out>) at /usr/src/debug/kde-base/kdelibs-9999/kdelibs-9999/kio/kio/scheduler.cpp:1007
#9  0x00007ff145d78772 in KDirListerCache::listDir (this=0x23ca230, lister=0x248e690, _u=<value optimized out>, _keep=<value optimized out>, _reload=48)
    at /usr/src/debug/kde-base/kdelibs-9999/kdelibs-9999/kio/kio/kdirlister.cpp:215
#10 0x00007ff12feb0c03 in Filelight::RemoteLister::_completed (this=0x248e690) at /usr/src/debug/kde-misc/filelight-9999/filelight-9999/src/part/remoteLister.cpp:162
#11 0x00007ff12feb10bc in Filelight::RemoteLister::qt_metacall (this=0x248e690, _c=QMetaObject::InvokeMetaMethod, _id=<value optimized out>, _a=0x7fffc45b5bb0)
    at /usr/src/debug/kde-misc/filelight-9999/filelight-9999_build/src/part/remoteLister.moc:81
#12 0x00007ff146edfc6b in QMetaObject::activate (sender=0x1d162b0, m=<value optimized out>, local_signal_index=<value optimized out>, argv=0x2475290) at kernel/qobject.cpp:3282
#13 0x00007ff146ee74bf in QSingleShotTimer::timerEvent (this=0x1d162b0) at kernel/qtimer.cpp:308
#14 0x00007ff146edc936 in QObject::event (this=0x1d162b0, e=0x3c) at kernel/qobject.cpp:1212
#15 0x00007ff14422f08c in QApplicationPrivate::notify_helper (this=0x68a270, receiver=0x1d162b0, e=0x7fffc45b6320) at kernel/qapplication.cpp:4242
#16 0x00007ff144237a3a in QApplication::notify (this=0x7fffc45b67f0, receiver=<value optimized out>, e=0x7fffc45b6320) at kernel/qapplication.cpp:4125
#17 0x00007ff1452d60e8 in KApplication::notify (this=0x7fffc45b67f0, receiver=0x1d162b0, event=0x7fffc45b6320) at /usr/src/debug/kde-base/kdelibs-9999/kdelibs-9999/kdeui/kernel/kapplication.cpp:302
#18 0x00007ff146eccfab in QCoreApplication::notifyInternal (this=0x7fffc45b67f0, receiver=0x1d162b0, event=0x7fffc45b6320) at kernel/qcoreapplication.cpp:704
#19 0x00007ff146ef993a in QCoreApplication::sendEvent (this=0x69b5f0) at kernel/qcoreapplication.h:215
#20 QTimerInfoList::activateTimers (this=0x69b5f0) at kernel/qeventdispatcher_unix.cpp:603
#21 0x00007ff146ef6798 in timerSourceDispatch (source=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:184
#22 idleTimerSourceDispatch (source=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:231
#23 0x00007ff142cbe7c3 in g_main_dispatch (context=0x69a520) at gmain.c:1960
#24 IA__g_main_context_dispatch (context=0x69a520) at gmain.c:2513
#25 0x00007ff142cc1ff0 in g_main_context_iterate (context=0x69a520, block=<value optimized out>, dispatch=<value optimized out>, self=<value optimized out>) at gmain.c:2591
#26 0x00007ff142cc2108 in IA__g_main_context_iteration (context=0x69a520, may_block=1) at gmain.c:2654
#27 0x00007ff146ef643e in QEventDispatcherGlib::processEvents (this=0x615750, flags=<value optimized out>) at kernel/qeventdispatcher_glib.cpp:407
#28 0x00007ff1442cbca6 in QGuiEventDispatcherGlib::processEvents (this=0x1d78460, flags=<value optimized out>) at kernel/qguieventdispatcher_glib.cpp:202
#29 0x00007ff146ecb8d2 in QEventLoop::processEvents (this=<value optimized out>, flags=) at kernel/qeventloop.cpp:149
#30 0x00007ff146ecbc9d in QEventLoop::exec (this=0x7fffc45b65d0, flags=) at kernel/qeventloop.cpp:201
#31 0x00007ff146ecf97b in QCoreApplication::exec () at kernel/qcoreapplication.cpp:981
#32 0x00007ff139d5c12e in kdemain (argc=<value optimized out>, argv=<value optimized out>) at /usr/src/debug/kde-base/konqueror-9999-r1/konqueror-9999/konqueror/src/konqmain.cpp:257
#33 0x0000000000407293 in launch (argc=1, _name=<value optimized out>, args=<value optimized out>, cwd=<value optimized out>, envc=1, envs=<value optimized out>, reset_env=false, tty=0x0, 
    avoid_loops=false, startup_id_str=0x40a76d "0") at /usr/src/debug/kde-base/kdelibs-9999/kdelibs-9999/kinit/kinit.cpp:705
#34 0x0000000000407f00 in handle_launcher_request (sock=8, who=<value optimized out>) at /usr/src/debug/kde-base/kdelibs-9999/kdelibs-9999/kinit/kinit.cpp:1197
#35 0x00000000004083b1 in handle_requests (waitForPid=0) at /usr/src/debug/kde-base/kdelibs-9999/kdelibs-9999/kinit/kinit.cpp:1390
#36 0x0000000000409096 in main (argc=4, argv=<value optimized out>, envp=<value optimized out>) at /usr/src/debug/kde-base/kdelibs-9999/kdelibs-9999/kinit/kinit.cpp:1825

Reported using DrKonqi
Comment 1 Jakub Stachowski 2010-03-14 20:51:02 UTC
SVN commit 1103301 by qbast:

If parent is used as QWidget at some point then it better actually be a QWidget instance.

BUG: 215893




 M  +2 -1      part.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1103301