If parent is used as QWidget at some point then it better actually be a QWidget instance.

BUG: 215893



svn path=/trunk/playground/utils/filelight/; revision=1103301